--- a/src/app/modules/search/search-box/search-box.component.html
+++ b/src/app/modules/search/search-box/search-box.component.html
@@ -1,8 +1,6 @@
 <div 
   fxFlex
-  fxLayoutAlign="center center"
-  fxFlexGap
-  fxLayoutGap='8px'>
+  fxLayoutAlign="center center">
 
   <mat-form-field
     fxFlex>
