autocomplete updates: clearOnSubmit defaults to false, displaySelectButton can be toggled

--- a/src/app/examples/autocomplete-example/autocomplete-example.component.html
+++ b/src/app/examples/autocomplete-example/autocomplete-example.component.html
@@ -1,11 +1,15 @@
 <tft-instantsearch 
   [config]="searchConfig">
+  <tft-autocomplete
+    (select)="handleItemSelected($event)"
+    (submit)="handleItemSubmitted($event)">
 
-  <tft-search-box>
+  </tft-autocomplete>
+  <!-- <tft-search-box>
   </tft-search-box>
 
   <tft-results>
-  </tft-results>
+  </tft-results> -->
 
 </tft-instantsearch>
 
