autocomplete chiplist grows to fill container

--- a/src/app/modules/search/refinement-list/refinement-list.component.html
+++ b/src/app/modules/search/refinement-list/refinement-list.component.html
@@ -3,7 +3,7 @@
   (submit)="handleSubmit($event)">
    
   <mat-form-field
-    fxFlex>
+    fxFlexFill>
     <mat-chip-list 
       #chipList>
       <mat-chip 
