update firebase, fix remove chip

--- a/src/app/modules/search/refinement-list/refinement-list.component.html
+++ b/src/app/modules/search/refinement-list/refinement-list.component.html
@@ -11,7 +11,7 @@
         *ngFor="let chip of chips" 
         [selectable]="chipSelectable" 
         [removable]="areChipsRemovable" 
-        (remove)="removeChip(chip)">
+        (removed)="removeChip(chip)">
 				{{chip.label}}
 				<mat-icon 
           matChipRemove 
